[gd_scene load_steps=11 format=3 uid="uid://c4hom0ownjibx"]

[ext_resource type="Script" path="res://Characters/Player/player_controller.gd" id="1_0f4vj"]
[ext_resource type="Environment" uid="uid://0ja3rgp6mlci" path="res://Materials/WorldEnvoirment.tres" id="2_88xg0"]
[ext_resource type="Script" path="res://Characters/Player/ui_controller.gd" id="3_m3llk"]
[ext_resource type="PackedScene" uid="uid://dhit0w3r7capu" path="res://Menus/PlayerConnectedMenus/pause_menu.tscn" id="4_7orkh"]
[ext_resource type="ArrayMesh" uid="uid://dy5ikueiyhfh0" path="res://Assets/meshes/GumGun.obj" id="4_agir1"]
[ext_resource type="Texture2D" uid="uid://b41ocqh83k7gk" path="res://Assets/crosshair.png" id="4_shkf2"]
[ext_resource type="ArrayMesh" uid="uid://06fggrtlps4d" path="res://Assets/meshes/GraviHand.obj" id="5_vasac"]
[ext_resource type="Script" path="res://Characters/Player/interact.gd" id="6_t4a1l"]

[sub_resource type="ViewportTexture" id="ViewportTexture_kr5a8"]
viewport_path = NodePath("HUD/EquipmentViewport")

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ooojm"]
height = 2.8

[node name="Player" type="CharacterBody3D" groups=["portable", "presser"]]
script = ExtResource("1_0f4vj")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Equipment" type="TextureRect" parent="HUD"]
light_mask = 1023
visibility_layer = 1023
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 36.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ViewportTexture_kr5a8")
expand_mode = 3

[node name="CrosshairContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Crosshair" type="TextureRect" parent="HUD/CrosshairContainer"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("4_shkf2")
expand_mode = 1

[node name="EquipmentViewport" type="SubViewport" parent="HUD"]
transparent_bg = true
size = Vector2i(1980, 1080)

[node name="EquipmentCamera" type="Camera3D" parent="HUD/EquipmentViewport"]
cull_mask = 4
environment = ExtResource("2_88xg0")

[node name="GumGun" type="MeshInstance3D" parent="HUD/EquipmentViewport/EquipmentCamera"]
transform = Transform3D(0.24985, 0.000847187, 0.00860848, -0.000519464, 0.249818, -0.00950865, -0.00863445, 0.00948507, 0.249671, 0.311712, -0.518754, -0.685904)
layers = 4
mesh = ExtResource("4_agir1")
skeleton = NodePath("../..")

[node name="GraviHand" type="MeshInstance3D" parent="HUD/EquipmentViewport/EquipmentCamera"]
transform = Transform3D(0.239461, 0.0419062, 0.0583294, -0.0241678, 0.238209, -0.0719218, -0.0676343, 0.063251, 0.232217, -0.411477, -0.525837, -0.365717)
layers = 4
mesh = ExtResource("5_vasac")

[node name="UI" type="Node" parent="."]
script = ExtResource("3_m3llk")

[node name="PauseMenu" parent="UI" instance=ExtResource("4_7orkh")]
visible = false

[node name="PlayerCollision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.826392, 0)
shape = SubResource("CapsuleShape3D_ooojm")

[node name="PlayerMainCamera" type="Camera3D" parent="."]
cull_mask = 1048571
environment = ExtResource("2_88xg0")
current = true
near = 0.001

[node name="HoldingAncor" type="Node3D" parent="PlayerMainCamera"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3)

[node name="InteractionRayCast" type="RayCast3D" parent="PlayerMainCamera"]
target_position = Vector3(0, 0, -3)
collision_mask = 65535
script = ExtResource("6_t4a1l")

[node name="SafePositionTimer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="timeout" from="SafePositionTimer" to="." method="_on_timer_timeout"]
